[project]
name = "Unet-Lightweight-Deblurring"
version = "1.0.0"
description = "A lightweight U-Net for image deblurring on constrained hardware."
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "ruff>=0.14.7",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
